--- a/src/components/CrosswordDisplay/CrosswordDisplay.css
+++ b/src/components/CrosswordDisplay/CrosswordDisplay.css
@@ -49,10 +49,35 @@
 
 .CrosswordDisplay>.grid .cell>.number {
     position: absolute;
-    top: 0;
-    left: 0;
+    display: inline-block;
+    top: -1px;
+    left: -1px;
+    width: .8rem;
+    height: .8rem;
+    background-color: white;
+    color: black;
+    border-bottom-right-radius: 30%;
     font-size: .7rem;
     cursor: pointer;
+    text-align: center;
+    transition: all .2s ease-in-out;
+}
+
+.CrosswordDisplay>.grid .cell>.number:hover {
+    width: 1.2rem;
+    height: 1.2rem;
+    font-size: .8rem;
+    border-bottom-right-radius: 50%;
+}
+
+.CrosswordDisplay>.grid .cell>.number:active {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 1.2rem;
+    border-bottom-right-radius: 0;
+    transition: none;
 }
 
 .CrosswordDisplay>.clues {}
